[gd_scene load_steps=6 format=3 uid="uid://5wr5kopdyrq7"]

[ext_resource type="Script" uid="uid://038u2o7dj1k3" path="res://script/darah.gd" id="1_3s07k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bmp5f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fupqt"]
bg_color = Color(0.78431374, 0, 0.25882354, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7rin2"]
bg_color = Color(0.003921569, 0.003921569, 0.003921569, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0
shadow_color = Color(0, 0, 0, 0.27450982)
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fxcjf"]
bg_color = Color(15.113225, 14.740965, 14.111561, 1)

[node name="Darah" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3s07k")

[node name="healthBar" type="ProgressBar" parent="."]
z_index = 1
layout_mode = 0
offset_right = 40.0
offset_bottom = 2.7
theme_override_styles/background = SubResource("StyleBoxEmpty_bmp5f")
theme_override_styles/fill = SubResource("StyleBoxFlat_fupqt")
value = 80.0
show_percentage = false

[node name="damageBar" type="ProgressBar" parent="healthBar"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_7rin2")
theme_override_styles/fill = SubResource("StyleBoxFlat_fxcjf")
value = 90.0
show_percentage = false

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
